--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 28 17:22:45 ALMT 2022
-sdk.dir=C\:\\Users\\jasic\\AppData\\Local\\Android\\Sdk
+#Fri Dec 02 12:51:20 ALMT 2022
+sdk.dir=C\:\\Users\\student\\AppData\\Local\\Android\\Sdk
